--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <script src="js/script.js"></script>
 </head>
 <body>
-    
+    <button onclick="bemvindo()"> Bem vindo </button>
+    <button onclick="operacoesComDiv()"> operações </button>
+    <div id="saida" onmouseover="tamanhoDiv()" onmouseout= "tamanhoNormalDiv()"></div>
+    <div class="saida"></div>
+    <div></div>
 </body>
 </html>
